adds mandatory recipe attributes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 credentials
 cookbooks/multimedia/attributes/normal.rb
 cookbooks/transmission/attributes/normal.rb
+cookbooks/mandatory/attributes/normal.rb
