adds sickbeard configuration to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ credentials
 cookbooks/multimedia/attributes/normal.rb
 cookbooks/transmission/attributes/normal.rb
 cookbooks/mandatory/attributes/normal.rb
+cookbooks/sickbeard/attributes/normal.rb
